# helicopter-collective

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/setup-devcontainer-cli/: aliases  configure.sh  devcontainer-feature.json  gitconfig  install.sh  starship.toml
examples/: blinky.rs  mag_read.rs
